--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@ add_executable(datn
     datn.c
 )
 # Add pico_stdlib library which aggregates commonly used features
-target_link_libraries(datn pico_stdlib)
+target_link_libraries(datn pico_stdlib hardware_adc)
 
 # enable usb output, disable uart output
 pico_enable_stdio_usb(datn 1)
