ADC and multiplexer verified with statisfying result, next up initial cluster DSP and i2c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ pico_sdk_init()
 # rest of your project
 add_executable(datn
     datn.c
+    adc.c
 )
 # Add pico_stdlib library which aggregates commonly used features
 target_link_libraries(datn pico_stdlib hardware_adc)
